8233955: VM crashes if more than one file are added to ClipboardContent via drag and drop

Reviewed-by: kcr, arapte